# rentfinder

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: rent_finder.yml
rent_finder/: __init__.py  config.py  main.py  scheduler.py
rent_finder/filtering/: openai_client.py  prompt.py  rules.py
rent_finder/ingestion/: json_reader.py  models.py
rent_finder/notifications/: formatter.py  telegram.py
rent_finder/scraper/: browser.py  facebook.py  marketplace.py  rate_limiter.py
rent_finder/storage/: database.py  repository.py  schema.sql
rent_finder/utils/: logging_config.py  retry.py
tests/: conftest.py  test_config.py  test_formatter.py  test_integration.py  test_json_reader.py  test_main_helpers.py  test_marketplace.py  test_openai_filter.py  test_repository.py  test_rules.py  test_scraper.py  test_telegram.py  test_utils.py
tests/fixtures/: sample_cookies.json  sample_listings.csv  sample_listings.json
